--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,7 +39,7 @@
 					<a href="#" class="close_btn"><i class="fas fa-times"></i></a>
 				</div>
 				<ul class="sidebar-menu">
-					<li class="menu-item"><a href="{{site.url}}">Home</a></li>
+					<li class="menu-item"><a href="{{site.url}}">ホーム</a></li>
                     {% for menu in site.data.navigation %}
 					<li class="menu-item"><a href="{{menu.url}}">{{menu.text}}</a>
 						{% if menu.submenu %}
@@ -51,7 +51,7 @@
 						{% endif %}
 					</li>
 					{% endfor %}
-					<li class="menu-item"><a href="contact.html" class="deneb_btn">Hire Us</a></li>
+					<li class="menu-item"><a href="contact.html" class="deneb_btn">お問い合わせ</a></li>
 				</ul>
 			</div>
 		</div>
