--- a/_includes/contact_area.html
+++ b/_includes/contact_area.html
@@ -9,30 +9,30 @@
 			</div>
 			<div class="col-lg-6">
 				<div class="section_title">
-					<h2>Get In Touch With Us</h2>
-					<p>When unknow printer took a gallery of type and scramblted it to make a type specimen book</p>
+					<h2>お問い合わせください</h2>
+					<p>Scrumトレーニングや旅行ビジネスの連携に関するご質問がございましたら、お気軽にお問い合わせください。</p>
 				</div>
 				<div class="contact_form">
-					<form method="post" action="https://formsubmit.io/send/tortoizthemes@gmail.com">
+					<form method="post" action="https://formsubmit.io/send/daniel@wowsei.com">
 						<div class="row">
 							<div class="col-lg-6">
 								<div class="form_group">
-									<input type="text" class="form_control" placeholder="First Name" name="name" required>
+									<input type="text" class="form_control" placeholder="名" name="name" required>
 								</div>
 							</div>
 							<div class="col-lg-6">
 								<div class="form_group">
-									<input type="text" class="form_control" placeholder="Last Name" name="name" required>
+									<input type="text" class="form_control" placeholder="姓" name="name" required>
 								</div>
 							</div>
 							<div class="col-lg-6">
 								<div class="form_group">
-									<input type="email" class="form_control" placeholder="Email Address" name="email" required>
+									<input type="email" class="form_control" placeholder="メールアドレス" name="email" required>
 								</div>
 							</div>
 							<div class="col-lg-6">
 								<div class="form_group">
-									<input type="text" class="form_control" placeholder="Phone No." name="phone" required>
+									<input type="text" class="form_control" placeholder="電話番号" name="phone" required>
 								</div>
 							</div>
 							<div class="col-lg-12">
@@ -42,7 +42,7 @@
 							</div>
 							<div class="col-lg-12">
 								<div class="button_box">
-									<button class="deneb_btn" type="submit">Submit Now</button>
+									<button class="deneb_btn" type="submit">送信</button>
 								</div>
 							</div>
 						</div>
