refined contact form

--- a/_includes/contact_area.html
+++ b/_includes/contact_area.html
@@ -37,7 +37,7 @@
 							</div>
 							<div class="col-lg-12">
 								<div class="form_group">
-									<textarea class="form_control" placeholder="Message" name="message"></textarea>
+									<textarea class="form_control" placeholder="メッセージ" name="message"></textarea>
 								</div>
 							</div>
 							<div class="col-lg-12">
