--- a/_includes/contact_form_2.html
+++ b/_includes/contact_form_2.html
@@ -4,56 +4,54 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="section_title">
-				<h2>Send us a message</h2>
-				<p>When unknow printer took a gallery of type and scramblted it to make a type specimen book</p>
+				<h2>メッセージを送ってください"</h2>
+				<p>Scrumトレーニングや旅行ビジネスの連携に関するご質問がございましたら、お気軽にお問い合わせください。</p>
 			</div>
 			<div class="contact_form">
 				<form action="https://formsubmit.io/send/tortoizthemes@gmail.com">
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="form_group">
-								<input type="text" class="form_control" placeholder="First Name" name="first_name" required>
+								<input type="text" class="form_control" placeholder="名" name="first_name" required>
 							</div>
 						</div>
 						<div class="col-lg-6">
 							<div class="form_group">
-								<input type="text" class="form_control" placeholder="Last Name" name="last_name" required>
+								<input type="text" class="form_control" placeholder="姓" name="last_name" required>
 							</div>
 						</div>
 						<div class="col-lg-6">
 							<div class="form_group">
-								<input type="email" class="form_control" placeholder="Email Address" name="email" required>
+								<input type="email" class="form_control" placeholder="メールアドレス" name="email" required>
 							</div>
 						</div>
 						<div class="col-lg-6">
 							<div class="form_group">
-								<input type="text" class="form_control" placeholder="Phone No." name="phone" required>
+								<input type="text" class="form_control" placeholder="電話番号" name="phone" required>
 							</div>
 						</div>
 						<div class="col-lg-6">
 							<div class="form_group">
-								<input type="text" class="form_control" placeholder="Project Title" name="subject" required>
+								<input type="text" class="form_control" placeholder="ビジネス" name="subject" required>
 							</div>
 						</div>
 						<div class="col-lg-6">
 							<div class="form_group">
 								<select name="service_name">
-									<option value="">Choose service</option>
-									<option value="Web Design">Web Design</option>
-									<option value="Web Development">Web Development</option>
-									<option value="Apps Development">Apps Development</option>
-									<option value="Graphic Design">Graphic Design</option>
+									<option value="">ビジネスを選択してください</option>
+									<option value="Web Design">Scrumトレーニング</option>
+									<option value="Web Development">旅行ビジネス</option>
 								</select>
 							</div>
 						</div>
 						<div class="col-lg-12">
 							<div class="form_group">
-								<textarea class="form_control" placeholder="Message" name="message"></textarea>
+								<textarea class="form_control" placeholder="メッセージ" name="message"></textarea>
 							</div>
 						</div>
 						<div class="col-lg-12">
 							<div class="button_box">
-								<button class="deneb_btn" type="submit">Submit Now</button>
+								<button class="deneb_btn" type="submit">送信する</button>
 							</div>
 						</div>
 					</div>
