refined footer and contact info

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,18 +28,18 @@
 							<h4>Essencial Links</h4>
 						</div>
 						<ul>
-							<li><a href="about">About Us</a></li>
-							<li><a href="services">Services</a></li>
-							<li><a href="portfolios">Portfolio</a></li>
+							<li><a href="about">当社について</a></li>
+							<li><a href="services">Scrumトレーニング</a></li>
+							<li><a href="portfolios">海外電車とバスの予約ビジネス</a></li>
 							<li><a href="blog">Blog</a></li>
-							<li><a href="contact">Contact Us</a></li>
+							<li><a href="contact">お問い合わせ</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 col-sm-12">
 					<div class="widget widget_contact">
 						<div class="widget_title">
-							<h4>Contact Us</h4>
+							<h4>お問い合わせ</h4>
 						</div>
 						<div class="contact_info">
 							<div class="single_info">
@@ -47,8 +47,7 @@
 									<i class="fas fa-phone-alt"></i>
 								</div>
 								<div class="info">
-									<p><a href="tel:+919246147999">1800-121-3637</a></p>
-									<p><a href="tel:+919246147999">+91 924-614-7999</a></p>
+									<p><a href="tel:+810361616496">+81 03 6161 6496</a></p>
 								</div>
 							</div>
 							<div class="single_info">
@@ -56,8 +55,7 @@
 									<i class="fas fa-envelope"></i>
 								</div>
 								<div class="info">
-									<p><a href="mailto:info@deneb.com">info@deneb.com</a></p>
-									<p><a href="mailto:services@deneb.com">services@deneb.com</a></p>
+									<p><a href="mailto:daniel@wowsei.com">daniel@wowsei.com</a></p>
 								</div>
 							</div>
 							<div class="single_info">
@@ -65,7 +63,7 @@
 									<i class="fas fa-map-marker-alt"></i>
 								</div>
 								<div class="info">
-									<p>125, Park street aven, Brocklyn,<span>Newyork.</span></p>
+									<p>東京都品川区北品川1-8-11 Daiwa品川Northビル<span>東京</span></p>
 								</div>
 							</div>
 						</div>
@@ -79,7 +77,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="copyright_text">
-						<p>Copyright &copy; 2023 <span>Deneb</span>. All rights reserved.</p>
+						<p>著作権 &copy; 2023 <span>セレンディピティ株式会社</span>。 全著作権所有。</p>
 					</div>
 				</div>
 			</div>
