--- a/_includes/hire_us_area.html
+++ b/_includes/hire_us_area.html
@@ -5,13 +5,13 @@
 			<div class="row align-items-center">
 				<div class="col-lg-7">
 					<div class="cta_content">
-						<h3>Have Any Project in Mind ?</h3>
-						<p>Curabitur libero eros, efficitur sit amet sodales tincidunt, aliquet et leo sed ut nibh feugiat, auctor enim quis.</p>
+						<h3>何かアイデアはありますか?</h3>
+						<p>スクラムアライアンスのCSMコース、CSPOコースについて問い合わせたい。 または旅行事業で協力したい場合</p>
 					</div>
 				</div>
 				<div class="col-lg-5">
 					<div class="button_box">
-						<a href="contact" class="deneb_btn">Hire Us</a>
+						<a href="contact" class="deneb_btn">お問い合わせ</a>
 					</div>
 				</div>
 			</div>
