refined menu navi and home/hire_us on home page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
 							<li><a href="about">当社について</a></li>
 							<li><a href="services">Scrumトレーニング</a></li>
 							<li><a href="portfolios">海外電車とバスの予約ビジネス</a></li>
-							<li><a href="blog">Blog</a></li>
+							<li><a href="blog">ブログ</a></li>
 							<li><a href="contact">お問い合わせ</a></li>
 						</ul>
 					</div>
@@ -63,7 +63,7 @@
 									<i class="fas fa-map-marker-alt"></i>
 								</div>
 								<div class="info">
-									<p>東京都品川区北品川1-8-11 Daiwa品川Northビル<span>東京</span></p>
+									<p>品川区北品川1-8-11 Daiwa品川Northビル<span>東京都</span></p>
 								</div>
 							</div>
 						</div>
