--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 <nav class="main_menu">
     <ul>
-	  <li class="menu-item {% if page.url == '/' %} active_link {% endif %}"><a href="{{site.url}}">Home</a></li>
+	  <li class="menu-item {% if page.url == '/' %} active_link {% endif %}"><a href="{{site.url}}">ホーム</a></li>
       {% for menu in site.data.navigation %}
       <li class="menu-item {% if page.url contains menu.url %} active_link {% endif %}"><a href="{{menu.url}}">{{menu.text}}</a>
        {% if menu.submenu %}
@@ -12,6 +12,6 @@
 		</li>
        {% endif %}
       {% endfor %}
-      <li class="menu-item"><a href="contact" class="deneb_btn">Hire Us</a></li>
+      <li class="menu-item"><a href="contact" class="deneb_btn">お問い合わせ</a></li>
     </ul>
 </nav>
