--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
 				<div class="col-lg-4 col-md-6 col-sm-12">
 					<div class="widget widget_link">
 						<div class="widget_title">
-							<h4>Essencial Links</h4>
+							<h4>必要なリンク</h4>
 						</div>
 						<ul>
 							<li><a href="about">当社について</a></li>
