added photo and self intro

--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -9,15 +9,15 @@
 				<div class="row align-items-center">
 					<div class="col-lg-5">
 						<div class="banner_content wow fadeInLeft">
-							<h1>Daniel Teng <br><span>@Wowsei</span></h1>
+							<h1>Daniel Teng<br><span>@Wowsei</span></h1>
 							<h5>Awakener</h5>
-							<p>I am excited to be a part of the next generation of non-invasive brain stimulation!</p>
-							<a href="#" class="deneb_btn">Hire Me</a>
+							<p>セレンディピティに満ちた旅を始めましょう！</p>
+							<a href="#" class="deneb_btn">お問い合わせ</a>
 						</div>
 					</div>
 					<div class="col-lg-7">
 						<div class="deneb_img_box wow fadeInRight">
-							<img src="/assets/images/banner_1.png" class="img-fluid" alt="slider two"/>
+							<img src="/assets/images/course_photo.jpeg" class="img-fluid" alt="slider two"/>
 						</div>
 					</div>
 				</div>
