--- a/_includes/contact_area.html
+++ b/_includes/contact_area.html
@@ -42,7 +42,7 @@
 							</div>
 							<div class="col-lg-12">
 								<div class="button_box">
-									<button class="deneb_btn" type="submit">送信</button>
+									<button class="deneb_btn" type="submit">送信する</button>
 								</div>
 							</div>
 						</div>
