added google map and title logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -77,7 +77,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="copyright_text">
-						<p>著作権 &copy; 2023 <span>セレンディピティ株式会社</span>。 全著作権所有。</p>
+						<p>著作権 &copy; 2023 <span>セレンディピティ株式会社</span></p>
 					</div>
 				</div>
 			</div>
