--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,6 +1,6 @@
 <!-- Start deneb_map section -->
 <section class="deneb_map">
 	<div class="map_box">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3071.2910802067827!2d90.45905169331171!3d23.691532202989123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1577214205224!5m2!1sen!2sbd"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3243.1597096485334!2d139.73911141122275!3d35.62378907249154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188a5cd102af7f%3A0xfbd1669b1567a9ce!2sDaiwa%20Shinagawa%20North%2C%201-ch%C5%8Dme-8-11%20Kitashinagawa%2C%20Shinagawa%20City%2C%20Tokyo%20140-0001!5e0!3m2!1sen!2sjp!4v1689777276921!5m2!1sen!2sjp"></iframe>"></iframe>
     </div>
 </section>
