added courses and travel products

--- a/_includes/contact_area.html
+++ b/_includes/contact_area.html
@@ -10,7 +10,7 @@
 			<div class="col-lg-6">
 				<div class="section_title">
 					<h2>お問い合わせください</h2>
-					<p>Scrumトレーニングや旅行ビジネスの連携に関するご質問がございましたら、お気軽にお問い合わせください。</p>
+					<p>スクラムコースや旅行ビジネスの連携に関するご質問がございましたら、お気軽にお問い合わせください。</p>
 				</div>
 				<div class="contact_form">
 					<form method="post" action="https://formsubmit.io/send/daniel@wowsei.com">
