--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -5,10 +5,10 @@
 		<nav class="page-navigation pagination">
 		<ul>
 		    {% if paginator.previous_page %}
-		    <li class="page-item prev"><a class="active" href="{{ paginator.previous_page_path | prepend: site.baseurl }}">Prev</a></li>
+		    <li class="page-item prev"><a class="active" href="{{ paginator.previous_page_path | prepend: site.baseurl }}">前のページ</a></li>
 		    {% endif %}
 		    {% if paginator.next_page %}
-		    <li class="page-item next"><a class="pagi-link" href="{{ paginator.next_page_path | prepend: site.baseurl }}">Next</a></li> 
+		    <li class="page-item next"><a class="pagi-link" href="{{ paginator.next_page_path | prepend: site.baseurl }}">次のページ</a></li> 
 		    {% endif %}
 		</ul>
 		</nav>
