--- a/_includes/services_2.html
+++ b/_includes/services_2.html
@@ -7,22 +7,13 @@
 					<div class="service_tab_nav">
 						<ul class="nav nav-tabs">
 						    <li class="nav-item">
-						      	<a class="nav-link active" data-toggle="tab" href="#web"><img src="../assets/images/icon_11.png" alt="web solution"><span>Web Solution</span></a>
+						      	<a class="nav-link active" data-toggle="tab" href="#web"><img src="../assets/images/icon_11.png" alt="web solution"><span>Awakening CSMコース</span></a>
 						    </li>
 						    <li class="nav-item">
-						      	<a class="nav-link" data-toggle="tab" href="#strategy"><img src="../assets/images/icon_12.png" alt="Strategy & Research"><span>Strategy & Research</span></a>
+						      	<a class="nav-link" data-toggle="tab" href="#strategy"><img src="../assets/images/icon_12.png" alt="Strategy & Research"><span>AHA CSPOコース</span></a>
 						    </li>
 						    <li class="nav-item">
-						      	<a class="nav-link" data-toggle="tab" href="#development"><img src="../assets/images/icon_13.png" alt="Web Development"><span>Web Development</span></a>
-						    </li>
-						    <li class="nav-item">
-						      	<a class="nav-link" data-toggle="tab" href="#app"><img src="../assets/images/icon_14.png" alt="App Design"><span>App Design</span></a>
-						    </li>
-						    <li class="nav-item">
-						      	<a class="nav-link" data-toggle="tab" href="#marketing"><img src="../assets/images/icon_15.png" alt="Digital Marketing"><span>Digital Marketing</span></a>
-						    </li>
-						    <li class="nav-item">
-						      	<a class="nav-link" data-toggle="tab" href="#analysis"><img src="../assets/images/icon_16.png" alt="Business Analysis"><span>Business Analysis</span></a>
+						      	<a class="nav-link" data-toggle="tab" href="#development"><img src="../assets/images/icon_13.png" alt="Web Development"><span>BTS BreakThrough Starterコース</span></a>
 						    </li>
 						</ul>
 					</div>
@@ -32,7 +23,7 @@
 					      	<div class="row align-items-center">
 					      		<div class="col-lg-6">
 					      			<div class="deneb_content_box">
-					      				<h2>Web Solution</h2>
+					      				<h2>Awakening CSMコース</h2>
 					      				<p>Etiam suscipit sed sem nec elementum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed accumsan, urna vel finibus sollicitudin, urna sem fringilla nisi.</p>
 					      				<p>In vel ante tristique, blandit nisi in, feugiat nisl. Nunc sagittis pretium arcu, ac consectetur diam feugiat vitae. Pellentesque sit amet elit facilisis, sodales nisl non, luctus ex. Donec molestie consequat velit, id imperdiet arcu sollicitudin.</p>
 					      				<p>Praesent ac tempus ipsum, eget consequat ante. Sed consequat, elit euismod finibus faucibus.</p>
@@ -49,7 +40,7 @@
 					      	<div class="row align-items-center">
 					      		<div class="col-lg-6">
 					      			<div class="deneb_content_box">
-					      				<h2>Strategy & Research</h2>
+					      				<h2>AHA CSPOコース</h2>
 					      				<p>Etiam suscipit sed sem nec elementum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed accumsan, urna vel finibus sollicitudin, urna sem fringilla nisi.</p>
 					      				<p>In vel ante tristique, blandit nisi in, feugiat nisl. Nunc sagittis pretium arcu, ac consectetur diam feugiat vitae. Pellentesque sit amet elit facilisis, sodales nisl non, luctus ex. Donec molestie consequat velit, id imperdiet arcu sollicitudin.</p>
 					      				<p>Praesent ac tempus ipsum, eget consequat ante. Sed consequat, elit euismod finibus faucibus.</p>
@@ -66,7 +57,7 @@
 					      	<div class="row align-items-center">
 					      		<div class="col-lg-6">
 					      			<div class="deneb_content_box">
-					      				<h2>Web Development</h2>
+					      				<h2>BTS BreakThrough Starterコース</h2>
 					      				<p>Etiam suscipit sed sem nec elementum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed accumsan, urna vel finibus sollicitudin, urna sem fringilla nisi.</p>
 					      				<p>In vel ante tristique, blandit nisi in, feugiat nisl. Nunc sagittis pretium arcu, ac consectetur diam feugiat vitae. Pellentesque sit amet elit facilisis, sodales nisl non, luctus ex. Donec molestie consequat velit, id imperdiet arcu sollicitudin.</p>
 					      				<p>Praesent ac tempus ipsum, eget consequat ante. Sed consequat, elit euismod finibus faucibus.</p>
