--- a/_includes/contact_form_2.html
+++ b/_includes/contact_form_2.html
@@ -5,7 +5,7 @@
 		<div class="col-lg-12">
 			<div class="section_title">
 				<h2>メッセージを送ってください"</h2>
-				<p>Scrumトレーニングや旅行ビジネスの連携に関するご質問がございましたら、お気軽にお問い合わせください。</p>
+				<p>スクラムコースや旅行ビジネスの連携に関するご質問がございましたら、お気軽にお問い合わせください。</p>
 			</div>
 			<div class="contact_form">
 				<form action="https://formsubmit.io/send/tortoizthemes@gmail.com">
@@ -39,7 +39,7 @@
 							<div class="form_group">
 								<select name="service_name">
 									<option value="">ビジネスを選択してください</option>
-									<option value="Web Design">Scrumトレーニング</option>
+									<option value="Web Design">スクラムコース</option>
 									<option value="Web Development">旅行ビジネス</option>
 								</select>
 							</div>
