--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
 						<div class="widget_title">
 							<img src="{{site.site_logo}}" class="img-fluid" alt="{{site.title}}"/>
 						</div>
-						<p>Quisque orci nisl, viverra et sem ac, tincidunt egestas massa. Morbi est arcu, hendrerit ac vehicula condimentum, euismod nec tortor praesent consequat urna.</p>
+						<!-- <p>Quisque orci nisl, viverra et sem ac, tincidunt egestas massa. Morbi est arcu, hendrerit ac vehicula condimentum, euismod nec tortor praesent consequat urna.</p> -->
 						<ul class="social">
 							{% if site.facebook_url %}
 							<li><a href="{{site.facebook_url}}" target="__blank"><i class="fab fa-facebook-f"></i></a></li>
@@ -29,7 +29,7 @@
 						</div>
 						<ul>
 							<li><a href="about">当社について</a></li>
-							<li><a href="services">Scrumトレーニング</a></li>
+							<li><a href="services">スクラムコース</a></li>
 							<li><a href="portfolios">海外電車とバスの予約ビジネス</a></li>
 							<li><a href="blog">ブログ</a></li>
 							<li><a href="contact">お問い合わせ</a></li>
