--- a/_includes/portfolios.html
+++ b/_includes/portfolios.html
@@ -4,20 +4,20 @@
 <div class="row">
 	<div class="col-lg-12">
 		<div class="section_title text-center">
-			<h2>Our Latest Projects</h2>
-			<p>When unknow printer took a gallery of type and scramblted it to make a type specimen book</p>
+			<h2>旅行商品</h2>
+			<p>私たちは旅行者と旅行代理店がエコフレンドリーで低コストで旅行できるようサポートしています。</p>
 		</div>
 	</div>
 </div>
 <div class="row">
 	<div class="col-lg-12">
 		<div class="project_button_2 text-center">
-			<button class="project_btn active_btn" data-filter="*">all</button>
-			<button class="project_btn" data-filter=".cat1">Web Design</button>
-			<button class="project_btn" data-filter=".cat2">Web Development</button>
-			<button class="project_btn" data-filter=".cat3">Branding</button>
-			<button class="project_btn" data-filter=".cat4">SEO</button>
-			<button class="project_btn" data-filter=".cat5">Mobile App</button>
+			<button class="project_btn active_btn" data-filter="*">すべて</button>
+			<button class="project_btn" data-filter=".cat1">旅行代理店向けのグループ向け電車とバスの予約サービス</button>
+			<button class="project_btn" data-filter=".cat2">個人旅行者向けの無料電車とバスの予約アプリとウェブサイト</button>
+			<button class="project_btn" data-filter=".cat3">OTA向け電車とバスの検索＆予約API統合</button>
+			<!-- <button class="project_btn" data-filter=".cat4">SEO</button>
+			<button class="project_btn" data-filter=".cat5">Mobile App</button> -->
 		</div>
 	</div>
 </div>
@@ -28,7 +28,7 @@
 				<img src="../assets/images/portfolio_1.jpg" class="img-fluid" alt="Design & Develop"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Design & Develop</a></h4>
+				<h4><a href="#">旅行代理店向けのグループ向け電車とバスの予約サービス</a></h4>
 				<p>Design</p>
 			</div>
 		</div>
@@ -39,7 +39,7 @@
 				<img src="../assets/images/portfolio_2.jpg" class="img-fluid" alt="Product Display"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Product Display</a></h4>
+				<h4><a href="#">個人旅行者向けの無料電車とバスの予約アプリとウェブサイト</a></h4>
 				<p>Design</p>
 			</div>
 		</div>
@@ -50,12 +50,12 @@
 				<img src="../assets/images/portfolio_3.jpg" class="img-fluid" alt="Design & Develop"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Design & Develop</a></h4>
+				<h4><a href="#">OTA向け電車とバスの検索＆予約API統合</a></h4>
 				<p>Design</p>
 			</div>
 		</div>
 	</div>
-	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat4">
+	<!-- <div class="col-lg-4 col-md-6 col-sm-12 single_project cat4">
 		<div class="grid_item">
 			<div class="deneb_img">
 				<img src="../assets/images/portfolio_4.jpg" class="img-fluid" alt="Design & Develop"/>
@@ -120,7 +120,7 @@
 				<p>Design</p>
 			</div>
 		</div>
-	</div>
+	</div> -->
 </div>
 </div>
 </section>
