--- a/_includes/services.html
+++ b/_includes/services.html
@@ -7,8 +7,9 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="section_title text-center">
-					<h2>Our Service</h2>
-					<p>When unknow printer took a gallery of type and scramblted it to make a type specimen book</p>
+					<h2>スクラムコース</h2>
+					<p>Awakening CSMコースでは、個人、チーム、および組織の効果を最大化することに焦点を当てています。</p>
+					<p>AHA CSPOコースでは、極限のイノベーションがどのように機能するか、イノベーションのツール、プロセス、原則に焦点を当てています。</p>
 				</div>
 			</div>
 		</div>
@@ -22,7 +23,7 @@
 					<div class="info">
 						<h4><a href="{{service.url}}">{{service.title}}</a></h4>
 						<p>{{service.content | strip_html | truncatewords:"10" }}</p>
-						<a href="{{service.url}}" class="link_btn">Read More</a>
+						<a href="{{service.url}}" class="link_btn">もっと</a>
 					</div>
 				</div>
 			</div>
