--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -13,7 +13,7 @@ pagination:
 				<div class="breadcrumb_content">
 					<h1>{{page.title | capitalize }}</h1>
 					<ul class="mt-3">
-						<li><a href="{{site.url}}">Home</a></li>
+						<li><a href="{{site.url}}">ホーム</a></li>
 						<li>{{page.title}}</li>
 					</ul>
 				</div>
