--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,7 +10,7 @@ layout: default
 				<div class="breadcrumb_content">
 					<h1>About Me</h1>
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="index.html">ホーム</a></li>
 						<li>About Me</li>
 					</ul>
 				</div>
