--- a/_includes/services_2.html
+++ b/_includes/services_2.html
@@ -7,13 +7,13 @@
 					<div class="service_tab_nav">
 						<ul class="nav nav-tabs">
 						    <li class="nav-item">
-						      	<a class="nav-link active" data-toggle="tab" href="#web"><img src="../assets/images/icon_11.png" alt="web solution"><span>Awakening CSMコース</span></a>
+						      	<a class="nav-link active" data-toggle="tab" href="#web"><img src="../assets/images/icon_11.png" alt="Awakening CSMコース"><span>Awakening CSMコース</span></a>
 						    </li>
 						    <li class="nav-item">
-						      	<a class="nav-link" data-toggle="tab" href="#strategy"><img src="../assets/images/icon_12.png" alt="Strategy & Research"><span>AHA CSPOコース</span></a>
+						      	<a class="nav-link" data-toggle="tab" href="#strategy"><img src="../assets/images/icon_12.png" alt="AHA CSPOコース"><span>AHA CSPOコース</span></a>
 						    </li>
 						    <li class="nav-item">
-						      	<a class="nav-link" data-toggle="tab" href="#development"><img src="../assets/images/icon_13.png" alt="Web Development"><span>BTS BreakThrough Starterコース</span></a>
+						      	<a class="nav-link" data-toggle="tab" href="#development"><img src="../assets/images/icon_13.png" alt="BTS BreakThrough Starterコース"><span>BTS スタートアップ ワークショップ</span></a>
 						    </li>
 						</ul>
 					</div>
@@ -31,7 +31,7 @@
 					      		</div>
 					      		<div class="col-lg-6">
 					      			<div class="deneb_img_box">
-					      				<img src="../assets/images/services/01.jpg" class="img-fluid" alt="Web Solution"/>
+					      				<img src="../assets/images/services/01.jpg" class="img-fluid" alt="Awakening CSMコース"/>
 					      			</div>
 					      		</div>
 					      	</div>
@@ -48,7 +48,7 @@
 					      		</div>
 					      		<div class="col-lg-6">
 					      			<div class="deneb_img_box">
-					      				<img src="../assets/images/services/02.jpg" class="img-fluid" alt="Strategy & Research"/>
+					      				<img src="../assets/images/services/02.jpg" class="img-fluid" alt="AHA CSPOコース"/>
 					      			</div>
 					      		</div>
 					      	</div>
@@ -57,7 +57,7 @@
 					      	<div class="row align-items-center">
 					      		<div class="col-lg-6">
 					      			<div class="deneb_content_box">
-					      				<h2>BTS BreakThrough Starterコース</h2>
+					      				<h2>BTS スタートアップ ワークショップ</h2>
 					      				<p>Etiam suscipit sed sem nec elementum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed accumsan, urna vel finibus sollicitudin, urna sem fringilla nisi.</p>
 					      				<p>In vel ante tristique, blandit nisi in, feugiat nisl. Nunc sagittis pretium arcu, ac consectetur diam feugiat vitae. Pellentesque sit amet elit facilisis, sodales nisl non, luctus ex. Donec molestie consequat velit, id imperdiet arcu sollicitudin.</p>
 					      				<p>Praesent ac tempus ipsum, eget consequat ante. Sed consequat, elit euismod finibus faucibus.</p>
@@ -70,7 +70,7 @@
 					      		</div>
 					      	</div>
 					    </div>
-					    <div id="app" class="tab-pane fade">
+					    <!-- <div id="app" class="tab-pane fade">
 					      	<div class="row align-items-center">
 					      		<div class="col-lg-6">
 					      			<div class="deneb_content_box">
@@ -120,7 +120,7 @@
 					      			</div>
 					      		</div>
 					      	</div>
-					    </div>
+					    </div> -->
 					</div>
 					<!-- tab pane -->
 				</div>
