--- a/_includes/contact_form_2.html
+++ b/_includes/contact_form_2.html
@@ -32,7 +32,7 @@
 						</div>
 						<div class="col-lg-6">
 							<div class="form_group">
-								<input type="text" class="form_control" placeholder="ビジネス" name="subject" required>
+								<input type="text" class="form_control" placeholder="ビジネス分野" name="subject" required>
 							</div>
 						</div>
 						<div class="col-lg-6">
@@ -40,7 +40,7 @@
 								<select name="service_name">
 									<option value="">ビジネスを選択してください</option>
 									<option value="Web Design">スクラムコース</option>
-									<option value="Web Development">旅行ビジネス</option>
+									<option value="Web Development">電車とバスの予約ビジネス</option>
 								</select>
 							</div>
 						</div>
