--- a/_includes/services_2.html
+++ b/_includes/services_2.html
@@ -7,13 +7,13 @@
 					<div class="service_tab_nav">
 						<ul class="nav nav-tabs">
 						    <li class="nav-item">
-						      	<a class="nav-link active" data-toggle="tab" href="#web"><img src="../assets/images/icon_11.png" alt="Awakening CSMコース"><span>Awakening CSMコース</span></a>
+						      	<a class="nav-link active" data-toggle="tab" href="#web"><img src="../assets/images/icon_11.png" alt="目覚めの認定スクラムマスターコース（Awakening CSM）"><span>目覚めの認定スクラムマスターコース（Awakening CSM）</span></a>
 						    </li>
 						    <li class="nav-item">
-						      	<a class="nav-link" data-toggle="tab" href="#strategy"><img src="../assets/images/icon_12.png" alt="AHA CSPOコース"><span>AHA CSPOコース</span></a>
+						      	<a class="nav-link" data-toggle="tab" href="#strategy"><img src="../assets/images/icon_12.png" alt="AHA認定スクラムプロダクトオーナーコース（AHA CSPO）"><span>AHA認定スクラムプロダクトオーナーコース（AHA CSPO）</span></a>
 						    </li>
 						    <li class="nav-item">
-						      	<a class="nav-link" data-toggle="tab" href="#development"><img src="../assets/images/icon_13.png" alt="BTS BreakThrough Starterコース"><span>BTS スタートアップ ワークショップ</span></a>
+						      	<a class="nav-link" data-toggle="tab" href="#development"><img src="../assets/images/icon_13.png" alt="BTSスタートアップワークショップ"><span>BTSスタートアップワークショップ</span></a>
 						    </li>
 						</ul>
 					</div>
@@ -23,15 +23,15 @@
 					      	<div class="row align-items-center">
 					      		<div class="col-lg-6">
 					      			<div class="deneb_content_box">
-					      				<h2>Awakening CSMコース</h2>
-					      				<p>Etiam suscipit sed sem nec elementum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed accumsan, urna vel finibus sollicitudin, urna sem fringilla nisi.</p>
-					      				<p>In vel ante tristique, blandit nisi in, feugiat nisl. Nunc sagittis pretium arcu, ac consectetur diam feugiat vitae. Pellentesque sit amet elit facilisis, sodales nisl non, luctus ex. Donec molestie consequat velit, id imperdiet arcu sollicitudin.</p>
-					      				<p>Praesent ac tempus ipsum, eget consequat ante. Sed consequat, elit euismod finibus faucibus.</p>
+					      				<h2>目覚めの認定スクラムマスターコース（Awakening CSM）</h2>
+					      				<p>製品開発は、周而復始の2つの部分に分かれます - 探索と交付です。</p>
+					      				<p>探索は、指数的な成長のアイデアを見つける方法、これらの創造的なアイデアをソーシャルネットワークを活用して加速し、拡大する方法を意味します。交付は、線形的な成長を確保する方法、アイデアを効率的に実現する方法、検証、実施、MVPを見つける方法、Scrumなどのアジャイル手法と組み合わせる方法、イテレーションを行う方法を意味します。これらは相補的で密接に関連しています。</p>
+					      				<p>CSMコースでは、特に交付部分に焦点を当てつつ、製品の持続的な革新を保証するための組織の枠組みも探求されます。</p>
 					      			</div>
 					      		</div>
 					      		<div class="col-lg-6">
 					      			<div class="deneb_img_box">
-					      				<img src="../assets/images/services/01.jpg" class="img-fluid" alt="Awakening CSMコース"/>
+					      				<img src="../assets/images/services/01.jpg" class="img-fluid" alt="目覚めの認定スクラムマスターコース（Awakening CSM）"/>
 					      			</div>
 					      		</div>
 					      	</div>
@@ -40,15 +40,15 @@
 					      	<div class="row align-items-center">
 					      		<div class="col-lg-6">
 					      			<div class="deneb_content_box">
-					      				<h2>AHA CSPOコース</h2>
-					      				<p>Etiam suscipit sed sem nec elementum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed accumsan, urna vel finibus sollicitudin, urna sem fringilla nisi.</p>
-					      				<p>In vel ante tristique, blandit nisi in, feugiat nisl. Nunc sagittis pretium arcu, ac consectetur diam feugiat vitae. Pellentesque sit amet elit facilisis, sodales nisl non, luctus ex. Donec molestie consequat velit, id imperdiet arcu sollicitudin.</p>
-					      				<p>Praesent ac tempus ipsum, eget consequat ante. Sed consequat, elit euismod finibus faucibus.</p>
+					      				<h2>AHA認定スクラムプロダクトオーナーコース（AHA CSPO）</h2>
+					      				<p>このコースでは、主に2つの問題に焦点を当てています。</p>
+					      				<p>どのようにして製品またはビジネスの革新（AHA）が生まれるのか？</p>
+					      				<p>これらのAHAをどのようにして広めるか？</p>
 					      			</div>
 					      		</div>
 					      		<div class="col-lg-6">
 					      			<div class="deneb_img_box">
-					      				<img src="../assets/images/services/02.jpg" class="img-fluid" alt="AHA CSPOコース"/>
+					      				<img src="../assets/images/services/02.jpg" class="img-fluid" alt="AHA認定スクラムプロダクトオーナーコース（AHA CSPO）"/>
 					      			</div>
 					      		</div>
 					      	</div>
@@ -57,15 +57,15 @@
 					      	<div class="row align-items-center">
 					      		<div class="col-lg-6">
 					      			<div class="deneb_content_box">
-					      				<h2>BTS スタートアップ ワークショップ</h2>
-					      				<p>Etiam suscipit sed sem nec elementum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed accumsan, urna vel finibus sollicitudin, urna sem fringilla nisi.</p>
-					      				<p>In vel ante tristique, blandit nisi in, feugiat nisl. Nunc sagittis pretium arcu, ac consectetur diam feugiat vitae. Pellentesque sit amet elit facilisis, sodales nisl non, luctus ex. Donec molestie consequat velit, id imperdiet arcu sollicitudin.</p>
-					      				<p>Praesent ac tempus ipsum, eget consequat ante. Sed consequat, elit euismod finibus faucibus.</p>
+					      				<h2>BTSスタートアップワークショップ</h2>
+					      				<p>このワークショップでは、ビジネス育成、リフトオフ、そしてイテレーションのライフサイクルを経験します。テクノロジー、プロダクトデザイン、運用、ビジネス手法、ビッグデータ分析、学習がビジネスの成長に果たす役割を理解することができます。</p>
+					      				<p>また、3日間で実際のビジネス製品を実装することで、これらすべてを結び付ける方法を学ぶことができます。</p>
+					      				<!-- <p>Praesent ac tempus ipsum, eget consequat ante. Sed consequat, elit euismod finibus faucibus.</p> -->
 					      			</div>
 					      		</div>
 					      		<div class="col-lg-6">
 					      			<div class="deneb_img_box">
-					      				<img src="../assets/images/services/03.jpg" class="img-fluid" alt="Web Development"/>
+					      				<img src="../assets/images/services/03.jpg" class="img-fluid" alt="BTSスタートアップワークショップ"/>
 					      			</div>
 					      		</div>
 					      	</div>
