refined train business and change locale to ja

--- a/_includes/contact_form_2.html
+++ b/_includes/contact_form_2.html
@@ -5,7 +5,7 @@
 		<div class="col-lg-12">
 			<div class="section_title">
 				<h2>メッセージを送ってください"</h2>
-				<p>スクラムコースや旅行ビジネスの連携に関するご質問がございましたら、お気軽にお問い合わせください。</p>
+				<p>スクラムコースや海外電車とバスの予約 ビジネスの連携に関するご質問がございましたら、お気軽にお問い合わせください。</p>
 			</div>
 			<div class="contact_form">
 				<form action="https://formsubmit.io/send/tortoizthemes@gmail.com">
