--- a/_includes/portfolios.html
+++ b/_includes/portfolios.html
@@ -4,7 +4,7 @@
 <div class="row">
 	<div class="col-lg-12">
 		<div class="section_title text-center">
-			<h2>旅行商品</h2>
+			<h2>海外電車とバスの予約ビジネス</h2>
 			<p>私たちは旅行者と旅行代理店がエコフレンドリーで低コストで旅行できるようサポートしています。</p>
 		</div>
 	</div>
@@ -13,11 +13,11 @@
 	<div class="col-lg-12">
 		<div class="project_button_2 text-center">
 			<button class="project_btn active_btn" data-filter="*">すべて</button>
-			<button class="project_btn" data-filter=".cat1">旅行代理店向けのグループ向け電車とバスの予約サービス</button>
-			<button class="project_btn" data-filter=".cat2">個人旅行者向けの無料電車とバスの予約アプリとウェブサイト</button>
-			<button class="project_btn" data-filter=".cat3">OTA向け電車とバスの検索＆予約API統合</button>
-			<!-- <button class="project_btn" data-filter=".cat4">SEO</button>
-			<button class="project_btn" data-filter=".cat5">Mobile App</button> -->
+			<button class="project_btn" data-filter=".cat1">旅行代理店向けのグループ向け海外電車とバスの予約サービス</button>
+			<button class="project_btn" data-filter=".cat2">個人旅行者向けの海外電車とバスの予約アプリとウェブサイト</button>
+			<button class="project_btn" data-filter=".cat3">OTA向け海外電車とバスの検索＆予約API統合</button>
+			<button class="project_btn" data-filter=".cat4">目的地旅行プロダクト</button>
+			<!-- <button class="project_btn" data-filter=".cat5">Mobile App</button> -->
 		</div>
 	</div>
 </div>
@@ -28,7 +28,7 @@
 				<img src="../assets/images/portfolio_1.jpg" class="img-fluid" alt="Design & Develop"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">旅行代理店向けのグループ向け電車とバスの予約サービス</a></h4>
+				<h4><a href="#">旅行代理店向けのグループ向け海外電車とバスの予約サービス</a></h4>
 				<p>Design</p>
 			</div>
 		</div>
@@ -39,7 +39,7 @@
 				<img src="../assets/images/portfolio_2.jpg" class="img-fluid" alt="Product Display"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">個人旅行者向けの無料電車とバスの予約アプリとウェブサイト</a></h4>
+				<h4><a href="#">個人旅行者向けの海外電車とバスの予約アプリとウェブサイト</a></h4>
 				<p>Design</p>
 			</div>
 		</div>
@@ -50,7 +50,7 @@
 				<img src="../assets/images/portfolio_3.jpg" class="img-fluid" alt="Design & Develop"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">OTA向け電車とバスの検索＆予約API統合</a></h4>
+				<h4><a href="#">OTA向け海外電車とバスの検索＆予約API統合</a></h4>
 				<p>Design</p>
 			</div>
 		</div>
