fixed latest products, portfolios page

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,15 +4,16 @@
 		<div class="row align-items-center">
 			<div class="col-lg-5">
 				<div class="deneb_img_box wow fadeInLeft">
-					<img src="{{relative_url}}/assets/images/about.png" class="img-fluid" alt="">
+					<img src="{{relative_url}}/assets/images/daniel_teng.jpeg" class="img-fluid" alt="">
 				</div>
 			</div>
 			<div class="col-lg-7">
 				<div class="deneb_content_box wow fadeInRight">
-					<h2>Why You Hire Us?</h2>
-					<p>Proin ipsum arcu, lobortis id ullamcorper nec, vehicula eget magna. Sed ut malesuada magna, eget lacinia sapien. Nam molestie non ex sit amet ornare. Nunc in pellentesque ipsum, vel vulputate sapien.</p>
-					<p>Suspendisse potenti. Aliquam elementum felis purus, quis vulputate libero semper nec. Morbi tincidunt maximus nisl vel placerat. Curabitur at ligula ac diam elementum hendrerit. Suspendisse nec metus eu est laoreet hendrerit vitae non ipsum. Nam faucibus elementum arcu, eget eleifend tortor.</p>
-					<a href="/about" class="deneb_btn">Read More</a>
+					<h2>なぜ私はDanielからScrumコースを受講すべきか？</h2>
+					<p>Danielは日本に住んでいる唯一の人物で、スクラムアライアンスのトップトレーナーライセンス（Certified Scrum Trainer、CST）およびコーチライセンス（Certified Enterprise Coach、CEC）を持っています。</p>
+					<p>2008年以来、アジア太平洋地域の様々な産業で個人、チーム、コミュニティ、そして組織のアジャイル転換の旅を導いてきました。</p>
+					<p>Danielは、実際の製品とビジネス(Xmove)を構築してきた唯一のトレーナー兼コーチです。彼はどんなアイデア、ツール、プロセスについても洞察と反省を共有することが容易であり、革新の効果と効率を促進するためのサポートができます。</p>
+					<a href="/about" class="deneb_btn">もっと</a>
 				</div>
 			</div>
 		</div>
