--- a/_includes/services.html
+++ b/_includes/services.html
@@ -10,7 +10,7 @@
 					<h2>スクラムコース</h2>
 					<p>Awakening CSMコースでは、個人、チーム、および組織の効果を最大化することに焦点を当てています。</p>
 					<p>AHA CSPOコースでは、極限のイノベーションがどのように機能するか、イノベーションのツール、プロセス、原則に焦点を当てています。</p>
-					<p>このワークショップでは、ビジネス育成、リフトオフ、そしてイテレーションのライフサイクルを経験します。テクノロジー、プロダクトデザイン、運用、ビジネス手法、ビッグデータ分析、学習がビジネスの成長に果たす役割を理解することができます。また、3日間で実際のビジネス製品を実装することで、これらすべてを結び付ける方法を学ぶことができます。</p>
+					<p>BTSスタートアップワークショップは、ビジネス育成、リフトオフ、そしてイテレーションのライフサイクルを経験します。テクノロジー、プロダクトデザイン、運用、ビジネス手法、ビッグデータ分析、学習がビジネスの成長に果たす役割を理解することができます。また、3日間で実際のビジネス製品を実装することで、これらすべてを結び付ける方法を学ぶことができます。</p>
 				</div>
 			</div>
 		</div>
