--- a/_includes/latest_projects.html
+++ b/_includes/latest_projects.html
@@ -7,20 +7,20 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="section_title text-center">
-					<h2>Our Latest Projects</h2>
-					<p>When unknow printer took a gallery of type and scramblted it to make a type specimen book</p>
+					<h2>海外電車とバスの予約ビジネスs</h2>
+					<p>私たちは旅行者と旅行代理店がエコフレンドリーで低コストで旅行できるようサポートしています。</p>
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-12">
-				<div class="project_button text-center">
-					<button class="project_btn active_btn" data-filter="*">all</button>
-					<button class="project_btn" data-filter=".cat1">Web Design</button>
-					<button class="project_btn" data-filter=".cat2">Web Development</button>
-					<button class="project_btn" data-filter=".cat3">Branding</button>
-					<button class="project_btn" data-filter=".cat4">SEO</button>
-					<button class="project_btn" data-filter=".cat5">Mobile App</button>
+				<div class="project_button_2 text-center">
+					<button class="project_btn active_btn" data-filter="*">すべて</button>
+					<button class="project_btn" data-filter=".cat1">旅行代理店向けのグループ向け海外電車とバスの予約サービス</button>
+					<button class="project_btn" data-filter=".cat2">個人旅行者向けの海外電車とバスの予約アプリとウェブサイト</button>
+					<button class="project_btn" data-filter=".cat3">OTA向け海外電車とバスの検索＆予約API統合</button>
+					<button class="project_btn" data-filter=".cat4">目的地旅行プロダクト</button>
+					<!-- <button class="project_btn" data-filter=".cat5">Mobile App</button> -->
 				</div>
 			</div>
 		</div>	
@@ -31,7 +31,7 @@
 						<img src="/assets/images/portfolio_1.jpg" class="img-fluid" alt="">
 					</div>
 					<div class="deneb_info">
-						<h4><a href="#">Design & Develop</a></h4>
+						<h4><a href="#">旅行代理店向けのグループ向け海外電車とバスの予約サービス</a></h4>
 						<p>Design</p>
 					</div>
 				</div>
@@ -42,7 +42,7 @@
 						<img src="/assets/images/portfolio_2.jpg" class="img-fluid" alt="">
 					</div>
 					<div class="deneb_info">
-						<h4><a href="#">Product Display</a></h4>
+						<h4><a href="#">個人旅行者向けの海外電車とバスの予約アプリとウェブサイト</a></h4>
 						<p>Branding</p>
 					</div>
 				</div>
@@ -53,7 +53,7 @@
 						<img src="/assets/images/portfolio_3.jpg" class="img-fluid" alt="">
 					</div>
 					<div class="deneb_info">
-						<h4><a href="#">Traveling App</a></h4>
+						<h4><a href="#">OTA向け海外電車とバスの検索＆予約API統合</a></h4>
 						<p>Mobile</p>
 					</div>
 				</div>
@@ -64,7 +64,7 @@
 						<img src="/assets/images/portfolio_1.jpg" class="img-fluid" alt="">
 					</div>
 					<div class="deneb_info">
-						<h4><a href="#">Design & Develop</a></h4>
+						<h4><a href="#">目的地旅行プロダクト</a></h4>
 						<p>Design</p>
 					</div>
 				</div>
