--- a/_includes/portfolios.html
+++ b/_includes/portfolios.html
@@ -55,18 +55,18 @@
 			</div>
 		</div>
 	</div>
-	<!-- <div class="col-lg-4 col-md-6 col-sm-12 single_project cat4">
+	 <div class="col-lg-4 col-md-6 col-sm-12 single_project cat4">
 		<div class="grid_item">
 			<div class="deneb_img">
 				<img src="../assets/images/portfolio_4.jpg" class="img-fluid" alt="Design & Develop"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Design & Develop</a></h4>
+				<h4><a href="#">目的地旅行プロダクト</a></h4>
 				<p>Design</p>
 			</div>
 		</div>
 	</div>
-	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat5">
+	<!--<div class="col-lg-4 col-md-6 col-sm-12 single_project cat5">
 		<div class="grid_item">
 			<div class="deneb_img">
 				<img src="../assets/images/portfolio_5.jpg" class="img-fluid" alt="Design & Develop"/>
