--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,7 +11,7 @@
 				<div class="deneb_content_box wow fadeInRight">
 					<h2>なぜ私はDanielからScrumコースを受講すべきか？</h2>
 					<p>Danielは日本に住んでいる唯一の人物で、スクラムアライアンスのトップトレーナーライセンス（Certified Scrum Trainer、CST）およびコーチライセンス（Certified Enterprise Coach、CEC）を持っています。</p>
-					<p>2008年以来、アジア太平洋地域の様々な産業で個人、チーム、コミュニティ、そして組織のアジャイル転換の旅を導いてきました。</p>
+					<p>2Danielは008年以来、中国、台湾、シンガポール、香港、韓国、タイ、ベトナムなど、様々な国のさまざまな産業において、個人、チーム、コミュニティ、そして組織のアジャイル転換の旅を導いてきました。</p>
 					<p>Danielは、実際の製品とビジネス(Xmove)を構築してきた唯一のトレーナー兼コーチです。彼はどんなアイデア、ツール、プロセスについても洞察と反省を共有することが容易であり、革新の効果と効率を促進するためのサポートができます。</p>
 					<a href="/about" class="deneb_btn">もっと</a>
 				</div>
