--- a/_includes/achivement.html
+++ b/_includes/achivement.html
@@ -4,11 +4,12 @@
 		<div class="row align-items-center">
 			<div class="col-lg-6  wow fadeInLeft">
 				<div class="section_title">
-					<h2>Over 500+ Completed work & Still Counting</h2>
+					<h2>日本の旅行者が海外でよりエコフレンドリーかつ安く旅行できるようにサポートします。</h2>
 				</div>
 				<div class="deneb_content_box">
-					<p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus at orci non risus luctus commodo. Ut nibh tellus, faucibus nec gravida.</p>
-					<p>Duis quis ipsum leo. Praesent vitae tellus ac ante porta mattis vel non ex. Quisque a finibus justo.</p>
+					<p>日本人が海外に旅行する際、ヨーロッパ全域（ドイツ、イタリア、スイス、フランス、イングランド、スペイン、オーストリア、スウェーデン、フィンランド、ノルウェー、ポーランド、チェコ共和国など）、アジア諸国（韓国、中国、台湾を含む）、アメリカ諸国（アメリカ合衆国、カナダ、ブラジルを含む）の電車、バス、フェリーのチケットを検索して予約することができます。</p>
+					<p>日本の旅行者は日本語を使用して検索や予約ができます。施設やチケットのルールなどの情報も全て日本語で提供されています。</p>
+					<p>日本の出境旅行市場向けに、最も手頃で充実した海外の電車、バス、フェリーのチケットを提供しています。</p>
 				</div>
 			</div>
 			<div class="col-lg-6">
@@ -17,29 +18,29 @@
 						<div class="icon">
 							<img src="{{relative_url}}/assets/images/icon_7.png" class="img-fluid" alt="">
 						</div>
-						<h3>300+</h3>
-						<p>Projects Done</p>
+						<h3>60+</h3>
+						<p>国（ヨーロッパ、アジア、北アメリカ、南アメリカ）</p>
 					</div>
 					<div class="single_achivment wow fadeInUp"  data-wow-delay=".1s">
 						<div class="icon">
 							<img src="{{relative_url}}/assets/images/icon_8.png" class="img-fluid" alt="">
 						</div>
-						<h3>250+</h3>
-						<p>Projects Done</p>
+						<h3>6,000+</h3>
+						<p>都市と町</p>
 					</div>
 					<div class="single_achivment wow fadeInUp" data-wow-delay=".2s">
 						<div class="icon">
 							<img src="{{relative_url}}/assets/images/icon_9.png" class="img-fluid" alt="">
 						</div>
-						<h3>200+</h3>
-						<p>Active Projects</p>
+						<h3>120,000+</h3>
+						<p>駅</p>
 					</div>
 					<div class="single_achivment wow fadeInUp"  data-wow-delay=".3s">
 						<div class="icon">
 							<img src="{{relative_url}}/assets/images/icon_10.png" class="img-fluid" alt="">
 						</div>
-						<h3>5+</h3>
-						<p>Years Exerience</p>
+						<h3>300+</h3>
+						<p>交通事業者</p>
 					</div>
 				</div>
 			</div>
