remove sidebar and recent post from service page

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -20,7 +20,7 @@ layout: default
 					<div class="post_content pb-2">
 						{{page.content}}
 					</div>
-					<div class="post_share_tag">
+					<!-- <div class="post_share_tag">
 						<div class="row">
 							<div class="col-lg-6 col-6">
 								<div class="social-share">
@@ -51,8 +51,8 @@ layout: default
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="recent_post blog_v1">
+					</div> -->
+					<!-- <div class="recent_post blog_v1">
 						<h3>Related Blogs</h3>
 						<div class="row">
 							{% for post in site.posts limit: "3" %}
@@ -71,12 +71,12 @@ layout: default
 							</div>
                             {% endfor %}
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
-			<div class="col-lg-4">
+			<!-- <div class="col-lg-4">
               {% include sidebar.html %}
-			</div>
+			</div> -->
 		</div>
 	</div>
 </section>
