--- a/_includes/services_2.html
+++ b/_includes/services_2.html
@@ -7,10 +7,10 @@
 					<div class="service_tab_nav">
 						<ul class="nav nav-tabs">
 						    <li class="nav-item">
-						      	<a class="nav-link active" data-toggle="tab" href="#web"><img src="../assets/images/icon_11.png" alt="目覚めの認定スクラムマスターコース（Awakening CSM）"><span>目覚めの認定スクラムマスターコース（Awakening CSM）</span></a>
+						      	<a class="nav-link active" data-toggle="tab" href="#awakening_csm"><img src="../assets/images/icon_11.png" alt="目覚めの認定スクラムマスターコース（Awakening CSM）"><span>目覚めの認定スクラムマスターコース（Awakening CSM）</span></a>
 						    </li>
 						    <li class="nav-item">
-						      	<a class="nav-link" data-toggle="tab" href="#strategy"><img src="../assets/images/icon_12.png" alt="AHA認定スクラムプロダクトオーナーコース（AHA CSPO）"><span>AHA認定スクラムプロダクトオーナーコース（AHA CSPO）</span></a>
+						      	<a class="nav-link" data-toggle="tab" href="#aha_cspo"><img src="../assets/images/icon_12.png" alt="AHA認定スクラムプロダクトオーナーコース（AHA CSPO）"><span>AHA認定スクラムプロダクトオーナーコース（AHA CSPO）</span></a>
 						    </li>
 						    <li class="nav-item">
 						      	<a class="nav-link" data-toggle="tab" href="#development"><img src="../assets/images/icon_13.png" alt="BTSスタートアップワークショップ"><span>BTSスタートアップワークショップ</span></a>
