--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -8,74 +8,90 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="section_title text-center">
-					<h2>What People Say</h2>
-					<p>When unknow printer took a gallery of type and scramblted it to make a type specimen book</p>
+					<h2>電車とバスのパートナー</h2>
+					<p>私たちはほとんどの大陸で主要な電車とバスの運行会社と密接に連携しています。</p>
 				</div>
 			</div>
 		</div>
 		<div class="row1">
 			<div class="single_img">
-				<img src="{{relative_url}}/assets/images/1.png" class="img-fluid" alt="">
+				<img src="{{relative_url}}/assets/images/db.png" class="img-fluid" alt="DB">
 			</div>
 			<div class="single_img sm_img">
-				<img src="{{relative_url}}/assets/images/2.png" class="img-fluid" alt="">
+				<img src="{{relative_url}}/assets/images/renfe.png" class="img-fluid" alt="Renfe">
 			</div>
 			<div class="single_img sm_img">
-				<img src="{{relative_url}}/assets/images/3.png" class="img-fluid" alt="">
+				<img src="{{relative_url}}/assets/images/sbb.png" class="img-fluid" alt="SBB">
+			</div>
+			<div class="single_img sm_img">
+				<img src="{{relative_url}}/assets/images/Trenitalia_logo.png" class="img-fluid" alt="SBB">
 			</div>
 		</div>
 		<div class="row2">
 			<div class="single_img">
-				<img src="{{relative_url}}/assets/images/4.png" class="img-fluid" alt="">
+				<img src="{{relative_url}}/assets/images/sncf.png" class="img-fluid" alt="SNCF">
 			</div>
 			<div class="single_img sm_img">
-				<img src="{{relative_url}}/assets/images/5.png" class="img-fluid" alt="">
+				<img src="{{relative_url}}/assets/images/bene.png" class="img-fluid" alt="BeNe">
 			</div>
 			<div class="single_img sm_img">
-				<img src="{{relative_url}}/assets/images/6.png" class="img-fluid" alt="">
+				<img src="{{relative_url}}/assets/images/flixbus.png" class="img-fluid" alt="Flixbus">
 			</div>
 			<div class="single_img">
-				<img src="{{relative_url}}/assets/images/7.png" class="img-fluid" alt="">
+				<img src="{{relative_url}}/assets/images/kr.png" class="img-fluid" alt="Korail">
 			</div>
 		</div>
 		<div class="testimonial_slide">
 			<div class="single_testimonial">
 				<div class="client_img">
-					<img src="{{relative_url}}/assets/images/testimonial_1.jpg" class="img-fluid" alt="">
+					<img src="{{relative_url}}/assets/images/db.png" class="img-fluid" alt="">
 					<div class="qoute">
 						<i class="fas fa-quote-left"></i>
 					</div>
 				</div>
 				<div class="client_info">
-					<h3>John Doe</h3>
-					<h5>Freelancer UX Designer</h5>
-					<p>Donec condimentum vehicula iaculis. Maecenas in aliquet neque. Suspendisse viverra, ante eget pellentesque pulvinar, nunc nisi molestie ligula, vitae convallis orci justo vitae sem. Integer vitae imperdiet augue, sed accumsan diam. Etiam non quam commodo dolor convallis cursus. Duis tempus dolor eget gravida fringilla. In ultricies velit eget sem tempus egestas.</p>
+					<h3>DB</h3>
+					<h5>ドイツの鉄道</h5>
+					<p>ドイツの鉄道（DB）は、ドイツ国内をカバーする広範な鉄道ネットワークを提供しています。高速列車や普通列車、地域列車など、さまざまな列車サービスが提供されており、主要都市や観光地を結ぶ便利な移動手段として利用されています。高い安全性と快適さで知られており、観光客やビジネス旅行者にとって便利な交通機関です。</p>
 				</div>
 			</div>
 			<div class="single_testimonial">
 				<div class="client_img">
-					<img src="{{relative_url}}/assets/images/testimonial_2.jpg" class="img-fluid" alt="">
+					<img src="{{relative_url}}/assets/images/sbb.png" class="img-fluid" alt="">
 					<div class="qoute">
 						<i class="fas fa-quote-left"></i>
 					</div>
 				</div>
 				<div class="client_info">
-					<h3>Jake Johnson</h3>
-					<h5>Freelancer UX Designer</h5>
-					<p>Donec condimentum vehicula iaculis. Maecenas in aliquet neque. Suspendisse viverra, ante eget pellentesque pulvinar, nunc nisi molestie ligula, vitae convallis orci justo vitae sem. Integer vitae imperdiet augue, sed accumsan diam. Etiam non quam commodo dolor convallis cursus. Duis tempus dolor eget gravida fringilla. In ultricies velit eget sem tempus egestas.</p>
+					<h3>SBB</h3>
+					<h5>スイス鉄道</h5>
+					<p>スイスの鉄道（SBB）は、スイス国内を広範囲にカバーする高度に発達した鉄道システムを有しています。スイスは鉄道網の密度が高く、山々や美しい景色を走る列車が有名です。この鉄道ネットワークは、主要都市や小さな町を結び、観光地やアルプスのリゾート地へのアクセスが容易です。また、スイスの鉄道は正確で信頼性が高く、観光客や地元の人々にとって重要な交通手段として重要な役割を果たしています。</p>
 				</div>
 			</div>
 			<div class="single_testimonial">
 				<div class="client_img">
-					<img src="{{relative_url}}/assets/images/testimonial_3.jpg" class="img-fluid" alt="">
+					<img src="{{relative_url}}/assets/images/Trenitalia_logo.png" class="img-fluid" alt="">
 					<div class="qoute">
 						<i class="fas fa-quote-left"></i>
 					</div>
 				</div>
 				<div class="client_info">
-					<h3>Celesto Anderson</h3>
-					<h5>Freelancer UX Designer</h5>
-					<p>Donec condimentum vehicula iaculis. Maecenas in aliquet neque. Suspendisse viverra, ante eget pellentesque pulvinar, nunc nisi molestie ligula, vitae convallis orci justo vitae sem. Integer vitae imperdiet augue, sed accumsan diam. Etiam non quam commodo dolor convallis cursus. Duis tempus dolor eget gravida fringilla. In ultricies velit eget sem tempus egestas.</p>
+					<h3>Trenitalia</h3>
+					<h5>トレニタリア</h5>
+					<p>トレニタリア（Trenitalia）は、イタリアの主要な鉄道運営会社です。トレニタリアはイタリア国内の多くの都市や地域を結ぶ広範な鉄道ネットワークを提供しています。高速列車、普通列車、地域列車など、さまざまな列車サービスが提供されており、旅行者に便利な移動手段として利用されています。トレニタリアの列車は快適で安全性が高く、イタリアを旅行する際に人気の交通機関です。</p>
+				</div>
+			</div>
+			<div class="single_testimonial">
+				<div class="client_img">
+					<img src="{{relative_url}}/assets/images/flixbus.jpg" class="img-fluid" alt="">
+					<div class="qoute">
+						<i class="fas fa-quote-left"></i>
+					</div>
+				</div>
+				<div class="client_info">
+					<h3>Flixbus</h3>
+					<h5>フリックスバス</h5>
+					<p>FlixBus（フリックスバス）は、ヨーロッパだけでなく、アメリカ、カナダ、ブラジル、トルコなど、さまざまな国でも運行しています。ドイツ発祥のこの長距離バス運営会社は、現代的で快適なバスを提供し、多くの主要都市や観光地を結ぶ便利な移動手段として人気を集めています。オンライン予約やアプリを通じて手軽にチケットを購入し、リーズナブルな価格でさまざまな目的地に旅行できます。FlixBusは環境に配慮した運行を重視し、環境に優しい選択肢としても注目されています。</p>
 				</div>
 			</div>
 		</div>
