remove one partner

--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -18,13 +18,10 @@
 				<img src="{{relative_url}}/assets/images/db.png" class="img-fluid" alt="DB">
 			</div>
 			<div class="single_img sm_img">
-				<img src="{{relative_url}}/assets/images/renfe.png" class="img-fluid" alt="Renfe">
+				<img src="{{relative_url}}/assets/images/Trenitalia_logo.png" class="img-fluid" alt="SBB">
 			</div>
 			<div class="single_img sm_img">
 				<img src="{{relative_url}}/assets/images/sbb.png" class="img-fluid" alt="SBB">
-			</div>
-			<div class="single_img sm_img">
-				<img src="{{relative_url}}/assets/images/Trenitalia_logo.png" class="img-fluid" alt="SBB">
 			</div>
 		</div>
 		<div class="row2">
@@ -37,17 +34,17 @@
 			<div class="single_img sm_img">
 				<img src="{{relative_url}}/assets/images/flixbus.png" class="img-fluid" alt="Flixbus">
 			</div>
-			<div class="single_img">
-				<img src="{{relative_url}}/assets/images/kr.png" class="img-fluid" alt="Korail">
+			<div class="single_img sm_img">
+				<img src="{{relative_url}}/assets/images/renfe.png" class="img-fluid" alt="Renfe">
 			</div>
 		</div>
 		<div class="testimonial_slide">
 			<div class="single_testimonial">
 				<div class="client_img">
 					<img src="{{relative_url}}/assets/images/db.png" class="img-fluid" alt="">
-					<div class="qoute">
+					<!-- <div class="qoute">
 						<i class="fas fa-quote-left"></i>
-					</div>
+					</div> -->
 				</div>
 				<div class="client_info">
 					<h3>DB</h3>
