change train operator logo image size

--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -29,7 +29,7 @@
 				<img src="{{relative_url}}/assets/images/sncf.png" class="img-fluid" alt="SNCF">
 			</div>
 			<div class="single_img sm_img">
-				<img src="{{relative_url}}/assets/images/bene.png" class="img-fluid" alt="BeNe">
+				<img src="{{relative_url}}/assets/images/bene_small.png" class="img-fluid" alt="BeNe">
 			</div>
 			<div class="single_img sm_img">
 				<img src="{{relative_url}}/assets/images/flixbus.png" class="img-fluid" alt="Flixbus">
