fixed partner logo url

--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -15,33 +15,33 @@
 		</div>
 		<div class="row1">
 			<div class="single_img">
-				<img src="{{relative_url}}/assets/images/db.png" class="img-fluid" alt="DB">
+				<img src="{{relative_url}}/assets/images/partners/db.png" class="img-fluid" alt="DB">
 			</div>
 			<div class="single_img sm_img">
-				<img src="{{relative_url}}/assets/images/Trenitalia_logo.png" class="img-fluid" alt="SBB">
+				<img src="{{relative_url}}/assets/images/partners/Trenitalia_logo.png" class="img-fluid" alt="SBB">
 			</div>
 			<div class="single_img sm_img">
-				<img src="{{relative_url}}/assets/images/sbb.png" class="img-fluid" alt="SBB">
+				<img src="{{relative_url}}/assets/images/partners/sbb.png" class="img-fluid" alt="SBB">
 			</div>
 		</div>
 		<div class="row2">
 			<div class="single_img">
-				<img src="{{relative_url}}/assets/images/sncf.png" class="img-fluid" alt="SNCF">
+				<img src="{{relative_url}}/assets/images/partners/sncf.png" class="img-fluid" alt="SNCF">
 			</div>
 			<div class="single_img sm_img">
-				<img src="{{relative_url}}/assets/images/bene_small.png" class="img-fluid" alt="BeNe">
+				<img src="{{relative_url}}/assets/images/partners/bene_small.png" class="img-fluid" alt="BeNe">
 			</div>
 			<div class="single_img sm_img">
-				<img src="{{relative_url}}/assets/images/flixbus.png" class="img-fluid" alt="Flixbus">
+				<img src="{{relative_url}}/assets/images/partners/flixbus.png" class="img-fluid" alt="Flixbus">
 			</div>
 			<div class="single_img sm_img">
-				<img src="{{relative_url}}/assets/images/renfe.png" class="img-fluid" alt="Renfe">
+				<img src="{{relative_url}}/assets/images/partners/renfe.png" class="img-fluid" alt="Renfe">
 			</div>
 		</div>
 		<div class="testimonial_slide">
 			<div class="single_testimonial">
 				<div class="client_img">
-					<img src="{{relative_url}}/assets/images/db.png" class="img-fluid" alt="">
+					<img src="{{relative_url}}/assets/images/partners/db.png" class="img-fluid" alt="">
 					<!-- <div class="qoute">
 						<i class="fas fa-quote-left"></i>
 					</div> -->
@@ -54,7 +54,7 @@
 			</div>
 			<div class="single_testimonial">
 				<div class="client_img">
-					<img src="{{relative_url}}/assets/images/sbb.png" class="img-fluid" alt="">
+					<img src="{{relative_url}}/assets/images/partners/sbb.png" class="img-fluid" alt="">
 					<div class="qoute">
 						<i class="fas fa-quote-left"></i>
 					</div>
@@ -67,7 +67,7 @@
 			</div>
 			<div class="single_testimonial">
 				<div class="client_img">
-					<img src="{{relative_url}}/assets/images/Trenitalia_logo.png" class="img-fluid" alt="">
+					<img src="{{relative_url}}/assets/images/partners/Trenitalia_logo.png" class="img-fluid" alt="">
 					<div class="qoute">
 						<i class="fas fa-quote-left"></i>
 					</div>
