--- a/_includes/portfolios.html
+++ b/_includes/portfolios.html
@@ -14,7 +14,7 @@
 		<div class="project_button_2 text-center">
 			<button class="project_btn active_btn" data-filter="*">すべて</button>
 			<button class="project_btn" data-filter=".cat1">旅行代理店向けのグループ向け海外電車とバスの予約サービス</button>
-			<button class="project_btn" data-filter=".cat2">個人旅行者向けの海外電車とバスの予約アプリとウェブサイト</button>
+			<button class="project_btn" data-filter=".cat2">個人旅行者向けの海外電車とバスの予約</button>
 			<button class="project_btn" data-filter=".cat3">OTA向け海外電車とバスの検索＆予約API統合</button>
 			<button class="project_btn" data-filter=".cat4">目的地旅行プロダクト</button>
 			<!-- <button class="project_btn" data-filter=".cat5">Mobile App</button> -->
