--- a/_includes/pricing.html
+++ b/_includes/pricing.html
@@ -1,5 +1,5 @@
 <!-- Start deneb_pricing section -->
-<section class="deneb_pricing pricing_v1">
+<!-- <section class="deneb_pricing pricing_v1">
 	<div class="shape_v4">
 		<img src="{{relative_url}}/assets/images/shape/shape_11.png" class="shape_11" alt="">
 	</div>
@@ -93,5 +93,5 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 <!-- End deneb_pricing section -->
