make experience partner

--- a/_includes/our_experience.html
+++ b/_includes/our_experience.html
@@ -4,8 +4,8 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="section_title text-center">
-					<h2>Our Work Experience</h2>
-					<p>When unknow printer took a gallery of type and scramblted it to make a type specimen book</p>
+					<h2>電車とバスのパートナー</h2>
+					<p>私たちはほとんどの大陸で主要な電車とバスの運行会社と密接に連携しています。</p>
 				</div>
 			</div>
 		</div>
@@ -13,7 +13,7 @@
 			<div class="row align-items-center">
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>Mauris dictum eros purus, vitae pharetra risus pulvinar rhoncus. Duis bibendum tristique luctus. Aliquam non urna odio morbi nec lectus tempus lorem vehicula consequat sed eu lectus. Ut maximus nulla a est placer.</p>
+						<p>ドイツの鉄道（DB）は、ドイツ国内をカバーする広範な鉄道ネットワークを提供しています。高速列車や普通列車、地域列車など、さまざまな列車サービスが提供されており、主要都市や観光地を結ぶ便利な移動手段として利用されています。高い安全性と快適さで知られており、観光客やビジネス旅行者にとって便利な交通機関です。</p>
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-2">
@@ -23,9 +23,9 @@
 				</div>
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
-						<h4>Graphic Designer</h4>
-						<h5>john abraham</h5>
-						<h6>March 2007- August 2020</h6>
+						<h4>Deutsche Bahn(DB)</h4>
+						<h5>ドイツの鉄道</h5>
+						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
 			</div>
@@ -34,9 +34,9 @@
 			<div class="row align-items-center">
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
-						<h4>Graphic Designer</h4>
-						<h5>john abraham</h5>
-						<h6>March 2007- August 2020</h6>
+						<h4>Trenitalia</h4>
+						<h5>トレニタリア</h5>
+						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-2">
@@ -46,7 +46,7 @@
 				</div>
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>Mauris dictum eros purus, vitae pharetra risus pulvinar rhoncus. Duis bibendum tristique luctus. Aliquam non urna odio morbi nec lectus tempus lorem vehicula consequat sed eu lectus. Ut maximus nulla a est placer.</p>
+						<p>トレニタリア（Trenitalia）は、イタリアの主要な鉄道運営会社です。トレニタリアはイタリア国内の多くの都市や地域を結ぶ広範な鉄道ネットワークを提供しています。高速列車、普通列車、地域列車など、さまざまな列車サービスが提供されており、旅行者に便利な移動手段として利用されています。トレニタリアの列車は快適で安全性が高く、イタリアを旅行する際に人気の交通機関です。</p>
 					</div>
 				</div>
 			</div>
@@ -55,7 +55,7 @@
 			<div class="row align-items-center">
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>Mauris dictum eros purus, vitae pharetra risus pulvinar rhoncus. Duis bibendum tristique luctus. Aliquam non urna odio morbi nec lectus tempus lorem vehicula consequat sed eu lectus. Ut maximus nulla a est placer.</p>
+						<p>スイスの鉄道（SBB）は、スイス国内を広範囲にカバーする高度に発達した鉄道システムを有しています。スイスは鉄道網の密度が高く、山々や美しい景色を走る列車が有名です。この鉄道ネットワークは、主要都市や小さな町を結び、観光地やアルプスのリゾート地へのアクセスが容易です。また、スイスの鉄道は正確で信頼性が高く、観光客や地元の人々にとって重要な交通手段として重要な役割を果たしています。</p>
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-2">
@@ -65,9 +65,30 @@
 				</div>
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
-						<h4>Graphic Designer</h4>
-						<h5>john abraham</h5>
-						<h6>March 2007- August 2020</h6>
+						<h4>SBB</h4>
+						<h5>スイス鉄道</h5>
+						<!-- <h6>March 2007- August 2020</h6> -->
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="single_experience">
+			<div class="row align-items-center">
+				<div class="col-lg-5 col-md-5">
+					<div class="deneb_info_box">
+						<h4>Flixbus</h4>
+						<h5>フリックスバス</h5>
+						<!-- <h6>March 2007- August 2020</h6> -->
+					</div>
+				</div>
+				<div class="col-lg-2 col-md-2">
+					<div class="icon text-center">
+						<h3>4.</h3>
+					</div>
+				</div>
+				<div class="col-lg-5 col-md-5">
+					<div class="deneb_text_box">
+						<p>FlixBus（フリックスバス）は、ヨーロッパだけでなく、アメリカ、カナダ、ブラジル、トルコなど、さまざまな国でも運行しています。ドイツ発祥のこの長距離バス運営会社は、現代的で快適なバスを提供し、多くの主要都市や観光地を結ぶ便利な移動手段として人気を集めています。オンライン予約やアプリを通じて手軽にチケットを購入し、リーズナブルな価格でさまざまな目的地に旅行できます。FlixBusは環境に配慮した運行を重視し、環境に優しい選択肢としても注目されています。</p>
 					</div>
 				</div>
 			</div>
