--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -9,10 +9,10 @@
 				<div class="row align-items-center">
 					<div class="col-lg-5">
 						<div class="banner_content wow fadeInLeft">
-							<h1>Daniel Teng<br><span>@Wowsei</span></h1>
+							<h1>Daniel Teng<br><span>@WoWSei</span></h1>
 							<h5>Awakener</h5>
 							<p>セレンディピティに満ちた旅を始めましょう！</p>
-							<a href="#" class="deneb_btn">お問い合わせ</a>
+							<a href="#contact" class="deneb_btn">お問い合わせ</a>
 						</div>
 					</div>
 					<div class="col-lg-7">
