--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -1,5 +1,5 @@
 <!-- Start deneb_testimonial section -->
-<section class="deneb_testimonial testimonial_v1">
+<!-- <section class="deneb_testimonial testimonial_v1">
 	<div class="shape_v5">
 		<img src="{{relative_url}}/assets/images/shape/shape_12.png" class="shape_12" alt="">
 		<img src="{{relative_url}}/assets/images/shape/shape_13.png" class="shape_13" alt="">
@@ -93,5 +93,5 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 <!-- End deneb_testimonial section -->
