--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -42,9 +42,9 @@
 			<div class="single_testimonial">
 				<div class="client_img">
 					<img src="{{relative_url}}/assets/images/partners/db.png" class="img-fluid" alt="">
-					<!-- <div class="qoute">
+					 <div class="qoute">
 						<i class="fas fa-quote-left"></i>
-					</div> -->
+					</div>
 				</div>
 				<div class="client_info">
 					<h3>DB</h3>
