--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -49,7 +49,7 @@ layout: default
 </section>
 <!-- End deneb_about section -->
 <!-- Start deneb_skill section -->
-<section class="deneb_skill">
+<!-- <section class="deneb_skill">
 	<div class="container">
 		<div class="row align-items-center">
 			<div class="col-lg-7">
@@ -99,7 +99,7 @@ layout: default
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 <!-- End deneb_skill section -->
 <!-- Start deneb_experience section -->
 <section class="deneb_experience">
