--- a/_includes/our_skills.html
+++ b/_includes/our_skills.html
@@ -1,5 +1,5 @@
 <!-- Start deneb_skill section -->
-<section class="deneb_skill">
+<!-- <section class="deneb_skill">
 	<div class="container">
 		<div class="row align-items-center">
 			<div class="col-lg-7">
@@ -49,5 +49,5 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 <!-- End deneb_skill section -->
