refined about page

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,7 +13,24 @@
 					<p>Danielは日本に住んでいる唯一の人物で、スクラムアライアンスのトップトレーナーライセンス（Certified Scrum Trainer、CST）およびコーチライセンス（Certified Enterprise Coach、CEC）を持っています。</p>
 					<p>2Danielは008年以来、中国、台湾、シンガポール、香港、韓国、タイ、ベトナムなど、様々な国のさまざまな産業において、個人、チーム、コミュニティ、そして組織のアジャイル転換の旅を導いてきました。</p>
 					<p>Danielは、実際の製品とビジネス(Xmove)を構築してきた唯一のトレーナー兼コーチです。彼はどんなアイデア、ツール、プロセスについても洞察と反省を共有することが容易であり、革新の効果と効率を促進するためのサポートができます。</p>
-					<a href="/about" class="deneb_btn">もっと</a>
+					<a href="/services/" class="deneb_btn">もっと</a>
+				</div>
+			</div>
+		</div>
+		<div class="row align-items-center">
+			<div class="col-lg-7">
+				<div class="deneb_content_box wow fadeInRight">
+					<h2>日本の旅行者が海外でよりエコフレンドリーかつ安く旅行できるようにサポートします。</h2>
+					<p>日本人が海外に旅行する際、ヨーロッパ全域（ドイツ、イタリア、スイス、フランス、イングランド、スペイン、オーストリア、スウェーデン、フィンランド、ノルウェー、ポーランド、チェコ共和国など）、アジア諸国（韓国、中国、台湾を含む）、アメリカ諸国（アメリカ合衆国、カナダ、ブラジルを含む）の電車、バス、フェリーのチケットを検索して予約することができます。</p>
+					<p>日本の旅行者は日本語を使用して検索や予約ができます。施設やチケットのルールなどの情報も全て日本語で提供されています。</p>
+					<p>日本の出境旅行市場向けに、最も手頃で充実した海外の電車、バス、フェリーのチケットを提供しています。</p>
+					<p>日本から海外への旅行者は、観光名所のチケット、ライブイベントのチケット、ツアーパッケージなどさまざまなチケットを購入することができます。</p>
+					<a href="/_portfolios/" class="deneb_btn">もっと</a>
+				</div>
+			</div>
+			<div class="col-lg-5">
+				<div class="deneb_img_box wow fadeInLeft">
+					<img src="{{relative_url}}/assets/images/ground_transportation_cuntries.jpg" class="img-fluid" alt="">
 				</div>
 			</div>
 		</div>
