--- a/_includes/achivement.html
+++ b/_includes/achivement.html
@@ -10,6 +10,7 @@
 					<p>日本人が海外に旅行する際、ヨーロッパ全域（ドイツ、イタリア、スイス、フランス、イングランド、スペイン、オーストリア、スウェーデン、フィンランド、ノルウェー、ポーランド、チェコ共和国など）、アジア諸国（韓国、中国、台湾を含む）、アメリカ諸国（アメリカ合衆国、カナダ、ブラジルを含む）の電車、バス、フェリーのチケットを検索して予約することができます。</p>
 					<p>日本の旅行者は日本語を使用して検索や予約ができます。施設やチケットのルールなどの情報も全て日本語で提供されています。</p>
 					<p>日本の出境旅行市場向けに、最も手頃で充実した海外の電車、バス、フェリーのチケットを提供しています。</p>
+					<p>日本から海外への旅行者は、観光名所のチケット、ライブイベントのチケット、ツアーパッケージなどさまざまなチケットを購入することができます。</p>
 				</div>
 			</div>
 			<div class="col-lg-6">
