--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,10 +8,10 @@ layout: default
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="breadcrumb_content">
-					<h1>About Me</h1>
+					<h1>当社について</h1>
 					<ul>
 						<li><a href="index.html">ホーム</a></li>
-						<li>About Me</li>
+						<li>当社について</li>
 					</ul>
 				</div>
 			</div>
