remove blogs from content

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -259,7 +259,7 @@ layout: default
 </section>
 <!-- End deneb_testimonial section -->
 <!-- Start deneb_blog section -->
-<section class="deneb_blog blog_v1">
+<!-- <section class="deneb_blog blog_v1">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
@@ -311,7 +311,7 @@ layout: default
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 <!-- End deneb_blog section -->
 <!-- Start deneb_contact section -->
 <section class="deneb_contact contact_v1 section_padding">
