--- a/_includes/latest_blog_posts.html
+++ b/_includes/latest_blog_posts.html
@@ -1,5 +1,5 @@
 <!-- Start deneb_blog section -->
-<section class="deneb_blog blog_v1">
+<!-- <section class="deneb_blog blog_v1">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
@@ -33,5 +33,5 @@
            {% endfor %}
 		</div>
 	</div>
-</section>
+</section> -->
 <!-- End deneb_blog section -->
